Fixed the promo code system🔧
1. N/A
2. 10
3. Fixed the promo code system

--- a/Client/Website/src/app/components/room/room-item/room-item.component.html
+++ b/Client/Website/src/app/components/room/room-item/room-item.component.html
@@ -2,19 +2,20 @@
     <div style="background: #14274A;">
         <img [src]="room?.value?.image_path || '../../../assets/room-1.png'" height="400vh"
             width="100%" style="object-fit: cover;">
-            <div style="vertical-align: center; display: flex; flex-direction: column;" >
-                <p class="label">{{room?.value?.label}}</p>
-            </div>
+        <div style="vertical-align: center; display: flex; flex-direction: column;">
+            <p class="label">{{room?.value?.label}}</p>
+        </div>
     </div>
 
 
     <table class="footer">
         <tr>
             <td>
-                <p class="price">
-                    {{formatPrice}}
-
-                </p>
+                <div class="price">
+                    USD
+                <div style="display: inline;" [style.textDecoration]="change ? 'line-through' : 
+                    'none'">{{formatPrice}}</div> {{formatNewPrice}}
+                </div>
             </td>
             <td>
                 <button class="check-btn" (click)="route()">
@@ -23,8 +24,8 @@
             </td>
             <td>
 
-                <star-rating [showHalfStars]="true" [rating]="room?.value?.rating || 0" staticColor="ok"
-                    [readOnly]="true"></star-rating>
+                <star-rating [showHalfStars]="true" [rating]="room?.value?.rating || 0"
+                    staticColor="ok" [readOnly]="true"></star-rating>
 
             </td>
         </tr>
