--- a/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.html
+++ b/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.html
@@ -46,7 +46,7 @@
     <div style="display: flex; flex-wrap: wrap;">
         <div *ngFor="let room of filtered_rooms| slice: (pagination.currentPage - 1) * pagination.pageSize : pagination.currentPage * pagination.pageSize"
             style="width: 50%;">
-            <app-room-item class="item" [room]="{key: room[0], value: room[1]}"
+            <app-room-item [change]="getEffect(room[0], room[1].type)" class="item" [room]="{key: room[0], value: room[1]}"
                 [room_type]="room_types.getPair(room[1].type)"></app-room-item>
             <mat-divider
                 style="margin-right: 64px; margin-left: 64px; margin: 16px; border-top-color: #14274a40"></mat-divider>
