Created and Populated the Facilities Component📱
1. Design, Implement and Link Services Page
2. 10
3. Populated the facilities component and added it to the services page.

--- a/Client/Application/src/app/components/activities/activities.component.html
+++ b/Client/Application/src/app/components/activities/activities.component.html
@@ -1,31 +1,33 @@
-<ion-content>
+<ion-content style="height: 66%;">
 
-  
-  
-  <table>
-    
-    <tr>
-      <td colspan="2">
-        <h2 class="img-title">Movie Night</h2>
-        <img class="main-img" src="../../../assets/services-pics/movie-night.png">
-      </td>
-      
-    </tr>
-    
-    <tr>
-      <td>
-        <img class="sub-imgs" src="../../../assets/services-pics/movie-night.png">
-      </td>
-      
-      <td>
-        <img class="sub-imgs" src="../../../assets/services-pics/movie-night.png">
-      </td>
-    </tr>
+  <div>
 
-    
-  </table>
-  <div class="button-container">
 
-    <button class="learn-more-button">Learn More</button>
+    <table>
+
+      <tr>
+        <td colspan="2">
+          <h2 class="img-title">Movie Night</h2>
+          <img class="main-img" src="../../../assets/services-pics/movie-night.png">
+        </td>
+
+      </tr>
+
+      <tr>
+        <td>
+          <img class="sub-imgs" src="../../../assets/services-pics/movie-night.png">
+        </td>
+
+        <td>
+          <img class="sub-imgs" src="../../../assets/services-pics/movie-night.png">
+        </td>
+      </tr>
+
+
+    </table>
+    <div class="button-container">
+
+      <button class="learn-more-button">Learn More</button>
+    </div>
   </div>
 </ion-content>
