--- a/Client/Application/src/app/pages/guest/services/browse/browse-services.component.html
+++ b/Client/Application/src/app/pages/guest/services/browse/browse-services.component.html
@@ -8,5 +8,7 @@
     
     <h1 class="activities-header">Activities</h1>
     <app-activities></app-activities>
+    <h1 class="activities-header">Facilities</h1>
+    <app-facilities></app-facilities>
   
 </ion-content>
