--- a/Client/Website/src/app/components/room/booking-details/booking-details.component.scss
+++ b/Client/Website/src/app/components/room/booking-details/booking-details.component.scss
@@ -20,7 +20,7 @@
 }
 
 .booking-info {
-    width: 50%;
+    width: 30vw;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
