--- a/Client/Website/src/app/components/activities/activity-list-item/activity-list-item.component.scss
+++ b/Client/Website/src/app/components/activities/activity-list-item/activity-list-item.component.scss
@@ -1,18 +1,3 @@
-.main {
-    // padding: 16px;
-    border-radius: 20px;
-    width: 100%;
-    margin: 16px;
-    padding: 16px;
-    // height: 50%;
-    background-color: white;
-
-
-}
-
-
-
-
 .label {
 
     font-family: 'Abhaya Libre';
@@ -59,6 +44,7 @@
     padding: 8px;
 
 }
+
 .quantity_btn:hover {
 
     background-color: lightgray
@@ -125,4 +111,32 @@
     background-color: gray;
     border: transparent;
 
+}
+
+.main {
+
+    display: flex;
+    background-color: white;
+
+}
+
+.details-title {
+    color: white;
+    font-weight: 600;
+    font-family: 'Robotto';
+    font-size: 30px;
+    margin: 20px 20px 0px 80px;
+}
+
+.details-pic {
+
+    width: 45vw;
+    margin: 20px 20px 0px 80px;
+}
+
+.activity-info {
+    width: 35vw;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: flex-start;
 }
