--- a/Client/Website/src/app/components/room/quick-availability/quick-availability.component.scss
+++ b/Client/Website/src/app/components/room/quick-availability/quick-availability.component.scss
@@ -42,6 +42,7 @@ td {
     font-style: normal;
     font-weight: 200;
     font-size: 13px;
+    border: 0px;
     line-height: 25px;
 
     letter-spacing: 0.07em;
