--- a/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.scss
+++ b/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.scss
@@ -7,6 +7,13 @@
     margin-bottom: 7.5%;
 }
 
+.scroll {
+
+    overflow-y: auto;
+    height: 100vh;
+
+}
+
 .title {
     text-transform: uppercase;
     color: white;
