--- a/Client/Website/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.scss
@@ -88,8 +88,7 @@
 .order-img {
     z-index: 0;
     display: inline-block;
-    width: 80%;
-    height: 50%;
+    object-fit: cover;
 }
 
 .profile-container {
@@ -103,6 +102,7 @@
 .orders-container {
     display: flex;
     flex-wrap: nowrap;
+    overflow-x: scroll;
 }
 
 .order-title {
@@ -124,8 +124,8 @@
 .wrap img {
 
     display: block;
-    height: auto;
-    width: 100%;
+    height: 20vw;
+    width: 20vw;
     z-index: 1;
 }
 
