--- a/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
+++ b/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
@@ -46,9 +46,9 @@
                                 </p>
                             </td>
                             <td style="width: 50%;">
-                                <p (click)="addToCart()" class="add-btn">
+                                <button [disabled]="!quantity" (click)="addToCart()" class="add-btn">
                                     Add to Cart
-                                </p>
+                                </button>
                             </td>
                         </tr>
                     </table>
