--- a/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.scss
+++ b/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.scss
@@ -91,7 +91,7 @@
     font-weight: 400;
     font-size: 24px;
 
-    
+
 }
 
 .mat-mdc-dialog-content {
@@ -114,7 +114,13 @@
 
     text-transform: uppercase;
     color: white;
-    border: 1px solid #14274A;
+    border: 0px solid #14274A;
+}
+
+.add-btn:disabled {
+
+    background-color: lightgray;
+    color: #14274A;
 }
 
 .add-btn:hover {
