--- a/Client/Website/src/app/components/room/room-item/room-item.component.scss
+++ b/Client/Website/src/app/components/room/room-item/room-item.component.scss
@@ -61,11 +61,19 @@ td {
     font-weight: 200;
     font-size: 16px;
     line-height: 25px;
+    border: 0px solid transparent;
 
     text-transform: uppercase;
 
     letter-spacing: 0.07em;
 
     color: #FFFFFF;
+
+}
+
+.check-btn:hover {
+
+    background-color: lightgray;
+    color: #14274A;
 
 }
