--- a/Client/Website/src/app/components/news/news-list-item/news-list-item.component.html
+++ b/Client/Website/src/app/components/news/news-list-item/news-list-item.component.html
@@ -9,13 +9,21 @@
                 <button class="button" (click)="openPopup()">
                     Learn More
                 </button>
-                <p class="likes">{{news.value.likes}} Likes</p>
+                <div class="likes">
+                    <div style="display: inline; vertical-align: middle;" (click)="like()">
+                        
+                            <mat-icon class="like_icon"
+                                [style.color]="news.value.is_liked ? '#A4274A' : '#14274A'">thumb_up_alt</mat-icon>
+                        
+                    </div>
+                    {{news.value.likes_number}} Likes
+                </div>
             </div>
         </td>
 
         <td style="width: 30px;">
             <!-- for spacing -->
-        </td>   
+        </td>
         <td class="body_right_col">
             <img height="300vw" [src]="image">
         </td>
