--- a/Client/Website/src/app/components/room/booking-details/booking-details.component.html
+++ b/Client/Website/src/app/components/room/booking-details/booking-details.component.html
@@ -25,10 +25,17 @@
         <p class="properties-info">{{check_in}} / {{end_date}}</p>
         <h4 class="properties-title">Occupancy:</h4>
         <p class="properties-info">{{formatOccupancy(room_type?.adults_capacity, room_type?.adults_with_kids_capacity, room_type?.kids_capacity)}}</p>
+        <h4 class="properties-title">Price:</h4>
+        <p class="properties-info">{{formatPrice(room_type?.price)}}</p>
         
         <h4 class="properties-total">Total:</h4>
         <div style="display: flex;">
-            <h3 class="properties-price">{{formatPrice(room_type?.price)}}</h3>
+            <h3 class="properties-price">{{formatTotalPrice(room_type?.price)}}</h3>
+            <button *ngIf="!room?.is_reviewed" (click)="review.emit(booking_id)" [style.visibility]="exhausted || past ? 'hidden' : 'visible'" class="review-button">
+                <mat-icon style="color: white">
+                    comment
+                </mat-icon>
+            </button>
             <button (click)="delete.emit(booking_id)" [style.visibility]="exhausted || past ? 'hidden' : 'visible'" class="cancel-button">Cancel</button>
         </div>
     </div>
