Linked Activities, Registrations, and Facilities📱
1. Design, Implement and Link Services Page
2. 10
3. Integrated the activities and facilities with the html.

--- a/Client/Application/src/app/components/activities/activities.component.html
+++ b/Client/Application/src/app/components/activities/activities.component.html
@@ -7,7 +7,7 @@
 
       <tr>
         <td colspan="2">
-          <h2 class="img-title">Movie Night</h2>
+          <h2 class="img-title">{{activity?.title}}</h2>
           <img class="main-img" src="../../../assets/services-pics/movie-night.png">
         </td>
 
