--- a/Client/Application/src/app/pages/guest/home/home.page.scss
+++ b/Client/Application/src/app/pages/guest/home/home.page.scss
@@ -4,7 +4,7 @@ $primary-color: #14274A;
 
   background-blend-mode: soft-light;
   background-color: #{$primary-color}55;
-  background-image: url('../../assets/home-pics/hotel.png');
+  background-image: url('../../../../assets/home-pics/hotel.png');
   background-size: cover;
   height: 58%;
   margin-left: -20%;
