--- a/Client/Application/src/app/components/facilities/facilities.component.html
+++ b/Client/Application/src/app/components/facilities/facilities.component.html
@@ -6,7 +6,7 @@
     
     <tr>
       <td colspan="2">
-        <h2 class="img-title">Gym</h2>
+        <h2 class="img-title">{{facility?.title}}</h2>
         <img class="main-img" src="../../../assets/services-pics/gym.png">
       </td>
       
