Implemented News Feed List Design📱
1. Design, Implement Home Page and Link News Feed
2. 10
3. Implemented the design for the news appearing on the home page. Made some amendments to the home page scss for responsiveness.

--- a/Client/Application/src/app/pages/guest/home/home.component.html
+++ b/Client/Application/src/app/pages/guest/home/home.component.html
@@ -13,6 +13,7 @@
   
   <div>
     <!-- the news component will go here -->
+    <app-news-list-item></app-news-list-item>
   </div>
 
 </ion-content>
