--- a/Client/Application/src/app/components/news/news-list-item/news-list-item.component.html
+++ b/Client/Application/src/app/components/news/news-list-item/news-list-item.component.html
@@ -1,3 +1,20 @@
-<p>
-  news-list-item works!
-</p>
+<div>
+  <ion-text class="header">
+    It all starts at 10:35PM
+  </ion-text>
+</div>
+
+<div class="image-bg">
+  <img src="../../../../assets/news-pics/news-sample-pic.png">
+</div>
+
+<div class="body">
+  We’ve collaborated with global superstars Tiësto and Tate McRae to create the track and music video “10:35”, which is
+  inspired by the essence, energy and electricity of Purple Motel.
+</div>
+
+<div>
+  <button class="button">
+    Explore
+  </button>
+</div>
