Handled verify email🔧
1. Complete Authentication
2. 10
3. Implemented the verification process

--- a/Client/Website/src/app/services/dialogs/authentication/register/register.component.html
+++ b/Client/Website/src/app/services/dialogs/authentication/register/register.component.html
@@ -92,6 +92,9 @@
     <div class="number-error-2" *ngIf="connection_error">
         {{'connection_error'|translate}} 
     </div>
+    <div class="number-error-2" *ngIf="used_credentials">
+        {{'used_credentials'|translate}} 
+    </div>
 
     <div class="register">
        
