Finished the forgot password process🔧
1. Complete Authentication
2. 10
3. Implemented the forgot password process

--- a/Client/Website/src/app/services/dialogs/authentication/login/login.component.html
+++ b/Client/Website/src/app/services/dialogs/authentication/login/login.component.html
@@ -21,7 +21,7 @@
         <div class="number-error" *ngIf="connection_error">
             {{'connection_error'|translate}} </div>
     </mat-form-field>
-    <a class="forgot-pass">
+    <a class="forgot-pass" (click)="forgotPassword()">
         {{'forgot_password'|translate}}?
     </a>
     <br>
