Created the Modals and Fixed Bugs📱
1. Design, Implement and Link Services Page
2. 10
3. Fixed a few bugs related to the title and set up the files for the modals needed.

--- a/Client/Application/src/app/components/activities/activities.component.html
+++ b/Client/Application/src/app/components/activities/activities.component.html
@@ -27,7 +27,7 @@
     </table>
     <div class="button-container">
 
-      <button class="learn-more-button">Learn More</button>
+      <button class="learn-more-button" (click)="openModal()">Learn More</button>
     </div>
   </div>
 </ion-content>
