--- a/Client/Application/src/app/components/facilities/facilities.component.html
+++ b/Client/Application/src/app/components/facilities/facilities.component.html
@@ -26,6 +26,7 @@
   </table>
   <div class="button-container">
 
-    <button class="learn-more-button">Learn More</button>
+    <button class="learn-more-button" (click)="openModal()">Learn More</button>
+   
   </div>
 </ion-content>
