--- a/Client/Website/src/app/pages/guest/profile/change-password/change-password.component.html
+++ b/Client/Website/src/app/pages/guest/profile/change-password/change-password.component.html
@@ -11,31 +11,28 @@
             {{'invalid_old_password'|translate}}
         </div>
     </mat-form-field>
-    <td>
-        <!-- New Password -->
-        <mat-form-field class="full-width input">
-            <mat-label class="label">{{'password'|translate}}</mat-label>
-            <input [(ngModel)]="new_password" matInput>
-            <div class="number-error" *ngIf="!validated_new_password">
-                {{'weak_password'|translate}} </div>
-        </mat-form-field>
-    </td>
-    <td>
-        <!-- Confirm New Password -->
-        <mat-form-field class="full-width input">
-            <mat-label class="label">{{'confirm_password'|translate}}</mat-label>
-            <input [(ngModel)]="confirm_new_password" matInput>
-            <div class="number-error" *ngIf="!password_match">
-                {{'password_match'|translate}} </div>
-        </mat-form-field>
-    </td>
+
+    <!-- New Password -->
+    <mat-form-field class="full-width input">
+        <mat-label class="label">{{'password'|translate}}</mat-label>
+        <input [(ngModel)]="new_password" matInput>
+        <div class="number-error" *ngIf="!validated_new_password">
+            {{'weak_password'|translate}} </div>
+    </mat-form-field>
+    <!-- Confirm New Password -->
+    <mat-form-field class="full-width input">
+        <mat-label class="label">{{'confirm_password'|translate}}</mat-label>
+        <input [(ngModel)]="confirm_new_password" matInput>
+        <div class="number-error" *ngIf="!password_match">
+            {{'password_match'|translate}} </div>
+    </mat-form-field>
 
 
     <div mat-dialog-actions>
         <button style="width: 30%;" class="back-btn" (click)="reset()"
             [disabled]="!old_password || !new_password || !confirm_new_password"
-            [style.background]="(!old_password || !new_password || !confirm_new_password) ? 'gray' : '#14274A'" mat-button
-            color="primary">
+            [style.background]="(!old_password || !new_password || !confirm_new_password) ? 'gray' : '#14274A'"
+            mat-button color="primary">
             {{'change_password'|translate}}
         </button>
     </div>
